新增oss sdk的依赖